...
                } else if (index == 1) { // Assuming you want to handle the second icon
                  isChatVisible = true
                }
              },
              modifier =
                  Modifier.padding(bottom = (screenHeight * 0.07).dp)
                      .testTag("ToolboxFloatingButton"))
        },
        topBar = {
          TopAppBar(
              title = {
                Column {
                  Row(
...
        content = { padding ->
          Box(modifier = Modifier.fillMaxSize().padding(padding)) {
            Column(
                modifier =
                    Modifier.fillMaxSize()
                        .padding(vertical = (screenHeight * 0.02).dp)
                        .testTag("homeContent"),
                verticalArrangement = Arrangement.Top,
                horizontalAlignment = Alignment.Start) {
                  Row(
                      modifier = Modifier.fillMaxWidth(),
                  ) {
                    Spacer(modifier = Modifier.width((screenWidth * 0.03).dp))
                    Log.d("QuickFixTextFieldCustomHomeScreen", "DISPLAYED")
                    Box {
                      QuickFixTextFieldCustom(
                          modifier = Modifier.semantics { testTag = "searchBar" },
                          showLeadingIcon = { true },
                          showTrailingIcon = { true },
                          leadingIcon = Icons.Outlined.Search,
                          trailingIcon = { Icons.Default.Clear },
                          descriptionLeadIcon = "Search",
                          descriptionTrailIcon = "Clear",
...
                      modifier =
                          Modifier.fillMaxWidth()
                              .padding(
                                  horizontal = (screenWidth * 0.04).dp,
                                  vertical = (screenHeight * 0.02).dp))

                  PopularServicesRow(
                      services = services,
                      modifier = Modifier.testTag("PopularServicesRow"),
                      onServiceClick = {
                        searchViewModel.setPopularServiceCategory(it)
                        navigationActionsRoot.navigateTo(UserTopLevelDestinations.SEARCH)
                      })
...
                          workerViewModel = workerViewModel,
                      )
                    }
                  } else {
                    Box(
                        modifier =
                            Modifier.fillMaxWidth().weight(1.5f).testTag("NoQuickFixesBox")) {
                          Column(
                              modifier =
                                  Modifier.fillMaxWidth()
                                      .padding(horizontal = 16.dp)
                                      .wrapContentHeight()
                                      .clip(RoundedCornerShape(10.dp))
...
